fixed margins and spacing. Fixed validation confirmation

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,7 +2,12 @@ body {
   background-color: #F1F1F1; }
 
 #signin {
-  margin-top: 30px; }
+  margin-top: 25px; }
+  #signin #signin_form {
+    margin-left: 125px; }
+
+#tag_line {
+  background-color: white; }
 
 #middle {
   padding: 20px;
@@ -21,6 +26,8 @@ body {
     box-shadow: 10px 10px 5px #888888; }
     #signup #signup_form h3 {
       text-align: center; }
+    #signup #signup_form #sign_box {
+      margin-left: 60px; }
 
 #post_section {
   height: 300px;
@@ -46,6 +53,9 @@ body {
     border-radius: 20px;
     margin-top: 10px;
     margin-left: 10px; }
+
+#post_form {
+  margin-top: 10px; }
 
 #footer {
   background-color: #2D2B2B; }
